force-app/main/default/objects/Course_Run_Instructor__c/Course_Run_Instructor__c.object-meta.xml
<CustomObject>
    <label>Course Run Instructor</label>
    <nameField>
        <displayFormat>INST-{0000}</displayFormat>
        <label>Course Run Instructor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Run Instructors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>