force-app/main/default/objects/Course_Run_Instructor__c/fields/Course_Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Course_Run_Id__c</fullName>
    <label>Course Run</label>
    <referenceTo>Course_Run__c</referenceTo>
    <relationshipLabel>Course Run Instructors</relationshipLabel>
    <relationshipName>Course_Run_Instructors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>