force-app/main/default/objects/Course_Run_Instructor__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Trainer</value>
        </filterItems>
        <infoMessage>Select an Instructor for this Course Run!</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Course Run Instructors</relationshipLabel>
    <relationshipName>Course_Run_Instructors</relationshipName>
    <type>Lookup</type>
</CustomField>