force-app/main/default/objects/Course_Run_Instructor__c/fields/Instructor_Category__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Category__c</fullName>
    <label>Instructor Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main Instructor</fullName>
            </value>
            <value>
                <fullName>Sub Instructor 1</fullName>
            </value>
            <value>
                <fullName>MainTrainer</fullName>
            </value>
            <value>
                <fullName>Sub Trainer1</fullName>
            </value>
            <value>
                <fullName>Sub Trainer2</fullName>
            </value>
            <value>
                <fullName>Sub Trainer3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>